--- a/jupiter-frontend/web/app/page.module.css
+++ b/jupiter-frontend/web/app/page.module.css
@@ -1,7 +1,16 @@
-.body{
+.body {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100%;
+  width: 100%;
+}
+.body div {
+  background-color: rgb(30, 30, 30);
+  color: white;
+  padding: 2px;
+  border-radius: 10px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
